syntax = "proto2";
package IM.Server;
option optimize_for = LITE_RUNTIME;

message IMMsgServInfo
{
	//cmd id:	0x0709
	required string ip = 1;
	required uint32 port = 2;
	required uint32 max_conn_cnt = 3;
	required uint32 cur_conn_cnt = 4;
	required string host_name = 5;
}